Add popup, Use reqct-query in gig page and realise get user controller

--- a/api/.env
+++ b/api/.env
@@ -1,1 +1,2 @@
 MONGO = mongodb+srv://quro4ka:quro4ka@cluster0.jmdk3r1.mongodb.net/?retryWrites=true&w=majority&dbname=fiver
+JWT_KEY = eyJhbGciOiJIUzI1NiJ9
